--- a/grails-cometd/plugin.xml
+++ b/grails-cometd/plugin.xml
@@ -17,23 +17,24 @@ CometD and the Bayeux protocol.
     <repository name='http://repo.grails.org/grails/core' url='http://repo.grails.org/grails/core/' />
     <repository name='mavenCentral' url='http://repo1.maven.org/maven2/' />
     <repository name='http://download.java.net/maven/2/' url='http://download.java.net/maven/2/' />
+    <repository name='http://grails.org/plugins' url='http://grails.org/plugins' />
   </repositories>
   <dependencies />
   <plugins>
     <compile>
-      <plugin group='org.grails.plugins' name='mail' version='1.0' />
-      <plugin group='org.grails.plugins' name='jquery-ui' version='1.8.7' />
-      <plugin group='org.grails.plugins' name='spring-security-ui' version='0.2' />
       <plugin group='org.grails.plugins' name='cache' version='1.0.0' />
+      <plugin group='org.grails.plugins' name='jquery-ui' version='1.8.7' />
+      <plugin group='org.grails.plugins' name='mail' version='1.0' />
       <plugin group='org.grails.plugins' name='famfamfam' version='1.0' />
+      <plugin group='org.grails.plugins' name='spring-security-ui' version='0.2' />
     </compile>
     <runtime>
+      <plugin group='org.grails.plugins' name='jquery' version='1.8.0' />
+      <plugin group='org.grails.plugins' name='resources' version='1.2.RC2' />
       <plugin group='org.grails.plugins' name='spring-security-core' version='1.2.3' />
       <plugin group='org.grails.plugins' name='hibernate' version='2.1.1' />
-      <plugin group='org.grails.plugins' name='resources' version='1.1.6' />
-      <plugin group='org.grails.plugins' name='database-migration' version='1.1' />
       <plugin group='org.grails.plugins' name='yui-minify-resources' version='0.1.5' />
-      <plugin group='org.grails.plugins' name='jquery' version='1.8.0' />
+      <plugin group='org.grails.plugins' name='database-migration' version='1.1' />
     </runtime>
   </plugins>
   <runtimePluginRequirements />
